--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Описание сайта" />
 
-    <title>Crash The Routines | Web Developer. Videoedit.</title>
+    <title>Wishbone+Partners</title>
 
     <link
       rel="stylesheet"
@@ -17,163 +17,136 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <div class="nav_icon"></div>
-          <ul class="nav_menu">
-            <li><a href="#about">Projects</a></li>
-            <li><a href="#skills">About</a></li>
-            <li><a href="#projects">News</a></li>
-            <li><a href="#price">Team</a></li>
-            <li><a href="#contacts">Contacts</a></li>
-            <div class="nav_btn">
-              <button class="template_btn">
-                <div class="nav_btn_title">Get template</div>
-              </button>
-            </div>
-          </ul>
-        </nav>
-      </div>
+      <div class="logo">Wishbone<span>+Partners</span></div>
+      <nav class="nav">
+        <a href="#">Projects</a>
+        <a href="#">About</a>
+        <a href="#">News</a>
+        <a href="#">Team</a>
+        <a href="#">Contact</a>
+        <a href="#" class="button">Get template</a>
+      </nav>
     </header>
 
-    <!-- Главный контент -->
     <main>
-      <section id="hero" class="hero">
+      <section class="hero">
         <div class="container">
-          <div class="hero_title">
-            <div class="hero_column">
-              <h1 class="title_hero">Wishbone+Partners</h1>
-              <p class="subtitle_hero">The home of beautiful architecture.</p>
-              <p>
+          <div class="hero-content">
+            <div class="hero-text">
+              <h2 class="subheading">Wishbone+Partners</h2>
+              <h1 class="heading">The home of<br />beautiful architecture.</h1>
+              <p class="description">
                 We are an architecture firm with a focus on beautiful but
                 functional design. At its heart, we believe design is about
                 usability and accessibility — these are the guiding principles
                 for our work. Read more about our previous projects, our process
                 and our team below.
               </p>
+              <a href="#" class="read-more">Read more</a>
             </div>
-            <div class="hero_column">
-              <img src="./img/hero_image.png" />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Добавляй нужные секции ниже -->
-      <section class="about" id="about">
-        <div class="container">
-          <div class="about_content">
-            <div class="hero_photo">
+            <div class="hero-image">
               <img
-                src="./assets/img/hero_photo.jpg"
-                width="400px"
-                height="600px"
-                alt="hero_photo"
+                src="./img/hero_image.png"
+                alt="Modern architecture building"
               />
             </div>
-            <div class="about_text">
-              <h2>My Name Is Adam Lean</h2>
-              <span class="tag">About Me</span>
+          </div>
+        </div>
+      </section>
 
-              <p class="about_description">
-                Hi, my name is Adam Lean and I am a web developer. I also do
-                blogging and music. I create websites on Django and React. Since
-                I work alone, I can take on a small project. My services include
-                layout, adaptive and backend.
+      <section class="our_firm">
+        <div class="container">
+          <div class="our">
+            <div class="firm-title">
+              <h2>Our firm</h2>
+            </div>
+            <div class="firm-content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
               </p>
-
-              <div class="about_skills">
-                <div class="skill">
-                  <img src="../assets/svg/webdev.svg" class="icon" />
-                  <h4>Web Development</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
-
-                <div class="skill">
-                  <img src="../assets/svg/mobiledev.svg" class="icon" />
-                  <h4>App Development</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
-
-                <div class="skill">
-                  <img src="../assets/svg/uxdesign.svg" class="icon" />
-                  <h4>UI/UX Design</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <div class="firm-image">
+                <img src="./img/firm_image.png" alt="firm image" />
+                <span>Stephen Collier</span>
+                <span>Senior Partner</span>
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="contact" id="contacts">
-        <div class="contact_container">
-          <div class="contact_image">
-            <img src="./assets/img/hero_photo.jpg" alt="hero_photo" />
-          </div>
-
-          <div class="contact_content">
-            <span class="subtitle">Contacts</span>
-            <h2>Contact with me</h2>
-
-            <p><strong>In any way convenient for you:</strong></p>
-            <div class="social_icons">
-              <a href="#"
-                ><img src="./assets/svg/youtube.svg" alt="YouTube"
-              /></a>
-              <a href="#"
-                ><img src="./assets/svg/Telegram.svg" alt="Telegram"
-              /></a>
-              <a href="#"
-                ><img src="./assets/svg/Instagram.svg" alt="Instagram"
-              /></a>
-            </div>
-
-            <p>
-              <strong
-                >Or you can write all the details so that I can contact
-                you:</strong
-              >
-            </p>
-            <form class="contact_form">
-              <div class="form_row">
-                <input type="text" placeholder="Your Name" />
-                <input type="email" placeholder="Your EMail" />
-              </div>
-
-              <select id="service_type" name="service_type" class="service">
-                <option value="landing">Landing Page</option>
-                <option value="videoedit">Video Edits</option>
-              </select>
-
-              <textarea placeholder="Message"></textarea>
-              <button type="submit">Submit</button>
-            </form>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- Футер -->
-    <footer class="footer">
-      <div class="container">
-        <p>&copy; 2025, All Rights Reserved</p>
+      <div class="frame">
+        <img src="./img/frame_image1.png" alt="frame image" />
       </div>
-    </footer>
 
-    <!-- Подключение скриптов -->
-    <script src="js/scripts.js"></script>
+      <section class="process">
+        <div class="container">
+          <div class="our-process">
+            <div class="process-title">
+              <h2>How we do what we do.</h2>
+              <p>Our process</p>
+            </div>
+            <div class="process-content">
+              <div class="process-step">
+                <div class="step-image">
+                  <img src="./img/sketching.png" alt="step image" />
+                </div>
+                <h2>Sketching</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                  ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
+                  tempor leo iaculis.
+                </p>
+              </div>
+              <div class="process-step">
+                <div class="step-image">
+                  <img src="./img/finalizing.png" alt="step image" />
+                </div>
+                <h2>Finalizing</h2>
+                <p>
+                  Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor
+                  leo iaculis luctus sapien ac arcu tempor, vitae.
+                </p>
+              </div>
+              <div class="process-step">
+                <div class="step-image">
+                  <img src="./img/building.png" alt="step image" />
+                </div>
+                <h2>Building</h2>
+                <p>
+                  Nulla ut tristique libero. Lorem ipsum ut tristique libero.
+                  Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor
+                  leo iaculis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="frame">
+        <img src="./img/frame_image2.png" alt="frame image" />
+      </div>
+    </main>
   </body>
 </html>
