--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
       <div class="frame">
         <img src="./img/frame_image2.png" alt="frame image" />
       </div>
+
+      <div class="frame">
+        <img src="./img/frame_image3.png" alt="frame image" />
+      </div>
     </main>
   </body>
 </html>
