--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <header class="header">
       <div class="logo">Wishbone<span>+Partners</span></div>
       <nav class="nav">
-        <a href="#">Projects</a>
-        <a href="#">About</a>
-        <a href="#">News</a>
-        <a href="#">Team</a>
-        <a href="#">Contact</a>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#news">News</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
         <a href="#" class="button">Get template</a>
       </nav>
     </header>
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section class="our_firm">
+      <section class="our_firm" id="about">
         <div class="container">
           <div class="our">
             <div class="firm-title">
@@ -148,9 +148,80 @@
         <img src="./img/frame_image2.png" alt="frame image" />
       </div>
 
+      <section class="customers">
+        <div class="container">
+          <div class="customers-block">
+            <div class="customers-textarea">
+              <div class="customers-title">
+                <h2>Happy customers.</h2>
+                <p>prior clients</p>
+              </div>
+              <div class="customers-text">
+                <p>
+                  Morbi neque ex, condimentum dapibus congue et, vulputate ut
+                  ligula. Vestibulum sit amet urna turpis. Mauris euismod elit
+                  et nisi ultrices, ut faucibus orci tincidunt.
+                </p>
+              </div>
+            </div>
+            <div class="customers-image">
+              <img src="./img/customer_1.png" alt="frame image" />
+              <img src="./img/customer_2.png" alt="frame image" />
+              <img src="./img/customer_3.png" alt="frame image" />
+              <img src="./img/customer_4.png" alt="frame image" />
+            </div>
+          </div>
+        </div>
+      </section>
+
       <div class="frame">
         <img src="./img/frame_image3.png" alt="frame image" />
       </div>
+
+      <section class="projects" id="projects">
+        <div class="container">
+          <div class="projects-block">
+            <div class="projects-title">
+              <h2>Featured projects.</h2>
+              <p>
+                Some of the latest and greatest projects from us<br />
+                here at Wishbone+Partners.
+              </p>
+            </div>
+            <div class="projects-image">
+              <img src="./img/project_1.png" alt="project image" />
+              <img src="./img/project_2.png" alt="project image" />
+              <img src="./img/project_3.png" alt="project image" />
+            </div>
+          </div>
+        </div>
+        <div class="all-projects">
+          <span>View all projects</span>
+        </div>
+      </section>
+
+      <section class="team">
+        <div class="container">
+          <div class="team-block">
+            <div class="team-title">
+              <h2>Meet our team.</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis.
+              </p>
+            </div>
+            <div class="all-team">
+              <span>See team</span>
+            </div>
+            <div class="team-image">
+              <img src="./img" alt="project image" />
+              <img src="./img" alt="project image" />
+              <img src="./img" alt="project image" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
