--- a/index.html
+++ b/index.html
@@ -200,24 +200,54 @@
         </div>
       </section>
 
-      <section class="team">
-        <div class="container">
-          <div class="team-block">
-            <div class="team-title">
-              <h2>Meet our team.</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Suspendisse varius enim in eros elementum tristique. Duis
-                cursus, mi quis.
-              </p>
+      <section class="team-section">
+        <div class="team-content">
+          <h2>Meet our team</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            varius enim in eros elementum tristique. Duis cursus, mi quis.
+          </p>
+          <a href="#" class="see-team">See team</a>
+        </div>
+
+        <div class="team-grid">
+          <div class="team-member">
+            <img src="img1.jpg" alt="Stephen Collier" />
+            <div>
+              <h4>Stephen Collier</h4>
+              <p>Senior Partner</p>
             </div>
-            <div class="all-team">
-              <span>See team</span>
+          </div>
+
+          <div class="team-member">
+            <img src="img2.jpg" alt="Nolan Peters" />
+            <div>
+              <h4>Nolan Peters</h4>
+              <p>Associate</p>
             </div>
-            <div class="team-image">
-              <img src="./img" alt="project image" />
-              <img src="./img" alt="project image" />
-              <img src="./img" alt="project image" />
+          </div>
+
+          <div class="team-member">
+            <img src="img3.jpg" alt="Ferris Wonder" />
+            <div>
+              <h4>Ferris Wonder</h4>
+              <p>Associate Partner</p>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <img src="img4.jpg" alt="Aria Stone" />
+            <div>
+              <h4>Aria Stone</h4>
+              <p>Senior Partner</p>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <img src="img5.jpg" alt="Niko Ferry" />
+            <div>
+              <h4>Niko Ferry</h4>
+              <p>Partner</p>
             </div>
           </div>
         </div>
