--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
         </div>
       </section>
 
-      <div class="frame">
-        <img src="./img/frame_image1.png" alt="frame image" />
-      </div>
+      <section class="frame">
+        <div class="frame-wrapper">
+          <img src="./img/frame_image1.png" alt="frame image" />
+        </div>
+      </section>
 
       <section class="process">
         <div class="container">
@@ -144,9 +146,11 @@
         </div>
       </section>
 
-      <div class="frame">
-        <img src="./img/frame_image2.png" alt="frame image" />
-      </div>
+      <section class="frame">
+        <div class="frame-wrapper">
+          <img src="./img/frame_image2.png" alt="frame image" />
+        </div>
+      </section>
 
       <section class="customers">
         <div class="container">
@@ -174,9 +178,11 @@
         </div>
       </section>
 
-      <div class="frame">
-        <img src="./img/frame_image3.png" alt="frame image" />
-      </div>
+      <section class="frame">
+        <div class="frame-wrapper">
+          <img src="./img/frame_image3.png" alt="frame image" />
+        </div>
+      </section>
 
       <section class="projects" id="projects">
         <div class="container">
@@ -195,12 +201,9 @@
             </div>
           </div>
         </div>
-        <div class="all-projects">
-          <span>View all projects</span>
-        </div>
       </section>
 
-      <section class="team-section">
+      <section class="team-section" id="team">
         <div class="team-content">
           <h2>Meet our team</h2>
           <p>
@@ -212,7 +215,7 @@
 
         <div class="team-grid">
           <div class="team-member">
-            <img src="img1.jpg" alt="Stephen Collier" />
+            <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
             <div>
               <h4>Stephen Collier</h4>
               <p>Senior Partner</p>
@@ -220,7 +223,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img2.jpg" alt="Nolan Peters" />
+            <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
             <div>
               <h4>Nolan Peters</h4>
               <p>Associate</p>
@@ -228,7 +231,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img3.jpg" alt="Ferris Wonder" />
+            <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
             <div>
               <h4>Ferris Wonder</h4>
               <p>Associate Partner</p>
@@ -236,7 +239,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img4.jpg" alt="Aria Stone" />
+            <img src="./img/Aria Stone.png" alt="Aria Stone" />
             <div>
               <h4>Aria Stone</h4>
               <p>Senior Partner</p>
@@ -244,7 +247,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img5.jpg" alt="Niko Ferry" />
+            <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
             <div>
               <h4>Niko Ferry</h4>
               <p>Partner</p>
@@ -252,6 +255,32 @@
           </div>
         </div>
       </section>
+
+      <section class="frame">
+        <div class="frame-wrapper">
+          <img src="./img/frame_image4.png" alt="frame image" />
+        </div>
+      </section>
     </main>
   </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__content">
+        <div class="footer__left">
+          <h3 class="footer__logo">Wishbone<span>+Partners</span></h3>
+          <p class="footer__text">
+            Powered by Webflow.<br />
+            All rights reserved Wishbone+Partners, Inc. Licensing.
+          </p>
+        </div>
+        <div class="footer__right">
+          <div class="footer__socials">
+            <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
