--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- {% load static %} -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,7 +23,7 @@
         <a href="#news">News</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
-        <a href="#" class="button">Get template</a>
+        <button class="button">Get template</button>
       </nav>
     </header>
 
@@ -204,53 +203,56 @@
       </section>
 
       <section class="team-section" id="team">
-        <div class="team-content">
-          <h2>Meet our team</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-            varius enim in eros elementum tristique. Duis cursus, mi quis.
-          </p>
-          <a href="#" class="see-team">See team</a>
-        </div>
-
-        <div class="team-grid">
-          <div class="team-member">
-            <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
-            <div>
-              <h4>Stephen Collier</h4>
-              <p>Senior Partner</p>
-            </div>
+        <div class="container">
+          <div class="team-content">
+            <h2>Meet our team</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros elementum tristique. Duis cursus,
+              mi quis.
+            </p>
+            <a href="#" class="see-team">See team</a>
           </div>
 
-          <div class="team-member">
-            <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
-            <div>
-              <h4>Nolan Peters</h4>
-              <p>Associate</p>
+          <div class="team-grid">
+            <div class="team-member">
+              <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
+              <div>
+                <h4>Stephen Collier</h4>
+                <p>Senior Partner</p>
+              </div>
             </div>
-          </div>
 
-          <div class="team-member">
-            <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
-            <div>
-              <h4>Ferris Wonder</h4>
-              <p>Associate Partner</p>
+            <div class="team-member">
+              <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
+              <div>
+                <h4>Nolan Peters</h4>
+                <p>Associate</p>
+              </div>
             </div>
-          </div>
 
-          <div class="team-member">
-            <img src="./img/Aria Stone.png" alt="Aria Stone" />
-            <div>
-              <h4>Aria Stone</h4>
-              <p>Senior Partner</p>
+            <div class="team-member">
+              <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
+              <div>
+                <h4>Ferris Wonder</h4>
+                <p>Associate Partner</p>
+              </div>
             </div>
-          </div>
 
-          <div class="team-member">
-            <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
-            <div>
-              <h4>Niko Ferry</h4>
-              <p>Partner</p>
+            <div class="team-member">
+              <img src="./img/Aria Stone.png" alt="Aria Stone" />
+              <div>
+                <h4>Aria Stone</h4>
+                <p>Senior Partner</p>
+              </div>
+            </div>
+
+            <div class="team-member">
+              <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
+              <div>
+                <h4>Niko Ferry</h4>
+                <p>Partner</p>
+              </div>
             </div>
           </div>
         </div>
@@ -262,25 +264,25 @@
         </div>
       </section>
     </main>
-  </body>
-  <footer class="footer">
-    <div class="container">
-      <div class="footer__content">
-        <div class="footer__left">
-          <h3 class="footer__logo">Wishbone<span>+Partners</span></h3>
-          <p class="footer__text">
-            Powered by Webflow.<br />
-            All rights reserved Wishbone+Partners, Inc. Licensing.
-          </p>
-        </div>
-        <div class="footer__right">
-          <div class="footer__socials">
-            <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__left">
+            <h3 class="footer__logo">Wishbone<span>+Partners</span></h3>
+            <p class="footer__text">
+              Powered by Webflow.<br />
+              All rights reserved Wishbone+Partners, Inc. Licensing.
+            </p>
+          </div>
+          <div class="footer__right">
+            <div class="footer__socials">
+              <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </body>
 </html>
