--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
               <a href="#" class="read-more">Read more</a>
             </div>
             <div class="hero-image">
-              <img
-                src="./img/hero_image.png"
-                alt="Modern architecture building"
-              />
+              <img src="./img/hero_image.png" alt="hero image" />
             </div>
           </div>
         </div>
