--- a/index.html
+++ b/index.html
@@ -201,54 +201,56 @@
 
       <section class="team-section" id="team">
         <div class="container">
-          <div class="team-content">
-            <h2>Meet our team</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Suspendisse varius enim in eros elementum tristique. Duis cursus,
-              mi quis.
-            </p>
-            <a href="#" class="see-team">See team</a>
-          </div>
-
-          <div class="team-grid">
-            <div class="team-member">
-              <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
-              <div>
-                <h4>Stephen Collier</h4>
-                <p>Senior Partner</p>
-              </div>
+          <div class="team-area">
+            <div class="team-content">
+              <h2>Meet our team</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis.
+              </p>
+              <a href="#" class="see-team">See team</a>
             </div>
 
-            <div class="team-member">
-              <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
-              <div>
-                <h4>Nolan Peters</h4>
-                <p>Associate</p>
+            <div class="team-grid">
+              <div class="team-member">
+                <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
+                <div>
+                  <h4>Stephen Collier</h4>
+                  <p>Senior Partner</p>
+                </div>
               </div>
-            </div>
 
-            <div class="team-member">
-              <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
-              <div>
-                <h4>Ferris Wonder</h4>
-                <p>Associate Partner</p>
+              <div class="team-member">
+                <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
+                <div>
+                  <h4>Nolan Peters</h4>
+                  <p>Associate</p>
+                </div>
               </div>
-            </div>
 
-            <div class="team-member">
-              <img src="./img/Aria Stone.png" alt="Aria Stone" />
-              <div>
-                <h4>Aria Stone</h4>
-                <p>Senior Partner</p>
+              <div class="team-member">
+                <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
+                <div>
+                  <h4>Ferris Wonder</h4>
+                  <p>Associate Partner</p>
+                </div>
               </div>
-            </div>
 
-            <div class="team-member">
-              <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
-              <div>
-                <h4>Niko Ferry</h4>
-                <p>Partner</p>
+              <div class="team-member">
+                <img src="./img/Aria Stone.png" alt="Aria Stone" />
+                <div>
+                  <h4>Aria Stone</h4>
+                  <p>Senior Partner</p>
+                </div>
+              </div>
+
+              <div class="team-member">
+                <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
+                <div>
+                  <h4>Niko Ferry</h4>
+                  <p>Partner</p>
+                </div>
               </div>
             </div>
           </div>
