--- a/index.html
+++ b/index.html
@@ -270,7 +270,13 @@
             <h3 class="footer__logo">Wishbone<span>+Partners</span></h3>
             <p class="footer__text">
               Powered by Webflow.<br />
-              All rights reserved Wishbone+Partners, Inc. Licensing.
+              All rights reserved Wishbone+Partners, Inc. Licensing.<br />
+              Design by
+              <a
+                href="https://www.figma.com/design/wyJGrJ8n5Z5qUySpXAK8mA/Wishbone?node-id=0-1&t=EQydxqapHMMdiiIw-1"
+                target="_blank"
+                >Designer Name</a
+              >
             </p>
           </div>
           <div class="footer__right">
