--- a/ru/index.html
+++ b/ru/index.html
@@ -44,7 +44,7 @@
               <a href="#" class="read-more">Узнать больше</a>
             </div>
             <div class="hero-image">
-              <img src="./img/hero_image.png" alt="hero image" />
+              <img src="../img/hero_image.png" alt="hero image" />
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
                 tristique posuere.
               </p>
               <div class="firm-image">
-                <img src="./img/firm_image.png" alt="firm image" />
+                <img src="../img/firm_image.png" alt="firm image" />
                 <span>Stephen Collier</span>
                 <span>Senior Partner</span>
               </div>
@@ -93,7 +93,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image1.png" alt="frame image" />
+          <img src="../img/frame_image1.png" alt="frame image" />
         </div>
       </section>
 
@@ -107,7 +107,7 @@
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/sketching.png" alt="step image" />
+                  <img src="../img/sketching.png" alt="step image" />
                 </div>
                 <h2>Набросок</h2>
                 <p>
@@ -118,7 +118,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/finalizing.png" alt="step image" />
+                  <img src="../img/finalizing.png" alt="step image" />
                 </div>
                 <h2>Завершение</h2>
                 <p>
@@ -128,7 +128,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/building.png" alt="step image" />
+                  <img src="../img/building.png" alt="step image" />
                 </div>
                 <h2>Сборка</h2>
                 <p>
@@ -144,7 +144,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image2.png" alt="frame image" />
+          <img src="../img/frame_image2.png" alt="frame image" />
         </div>
       </section>
 
@@ -165,10 +165,10 @@
               </div>
             </div>
             <div class="customers-image">
-              <img src="./img/customer_1.png" alt="frame image" />
-              <img src="./img/customer_2.png" alt="frame image" />
-              <img src="./img/customer_3.png" alt="frame image" />
-              <img src="./img/customer_4.png" alt="frame image" />
+              <img src="../img/customer_1.png" alt="frame image" />
+              <img src="../img/customer_2.png" alt="frame image" />
+              <img src="../img/customer_3.png" alt="frame image" />
+              <img src="../img/customer_4.png" alt="frame image" />
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image3.png" alt="frame image" />
+          <img src="../img/frame_image3.png" alt="frame image" />
         </div>
       </section>
 
@@ -191,9 +191,9 @@
               </p>
             </div>
             <div class="projects-image">
-              <img src="./img/project_1.png" alt="project image" />
-              <img src="./img/project_2.png" alt="project image" />
-              <img src="./img/project_3.png" alt="project image" />
+              <img src="../img/project_1.png" alt="project image" />
+              <img src="../img/project_2.png" alt="project image" />
+              <img src="../img/project_3.png" alt="project image" />
             </div>
           </div>
         </div>
@@ -214,7 +214,7 @@
 
             <div class="team-grid">
               <div class="team-member">
-                <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
+                <img src="../img/Stephen Collier.png" alt="Stephen Collier" />
                 <div>
                   <h4>Stephen Collier</h4>
                   <p>Senior Partner</p>
@@ -222,7 +222,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
+                <img src="../img/Nolan Peters.png" alt="Nolan Peters" />
                 <div>
                   <h4>Nolan Peters</h4>
                   <p>Associate</p>
@@ -230,7 +230,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
+                <img src="../img/Ferris Wonder.png" alt="Ferris Wonder" />
                 <div>
                   <h4>Ferris Wonder</h4>
                   <p>Associate Partner</p>
@@ -238,7 +238,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Aria Stone.png" alt="Aria Stone" />
+                <img src="../img/Aria Stone.png" alt="Aria Stone" />
                 <div>
                   <h4>Aria Stone</h4>
                   <p>Senior Partner</p>
@@ -246,7 +246,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
+                <img src="../img/Niko Ferry.png" alt="Niko Ferry" />
                 <div>
                   <h4>Niko Ferry</h4>
                   <p>Partner</p>
@@ -259,7 +259,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image4.png" alt="frame image" />
+          <img src="../img/frame_image4.png" alt="frame image" />
         </div>
       </section>
     </main>
