--- a/ru/index.html
+++ b/ru/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,24 @@
     <meta name="description" content="Описание сайта" />
 
     <title>Wishbone+Partners</title>
+
+    <script defer>
+      (async function () {
+        try {
+          const res = await fetch("https://api.country.is/");
+          const data = await res.json();
+          const country = data.country.toLowerCase();
+
+          const allowedCountries = ["ru"];
+
+          if (!allowedCountries.includes(country)) {
+            window.location.href = "404.html";
+          }
+        } catch (e) {
+          window.location.href = "404.html";
+        }
+      })();
+    </script>
 
     <link
       rel="stylesheet"
