--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,12 +15,39 @@
           const data = await res.json();
           const country = data.country.toLowerCase();
 
-          const allowedCountries = ["ru"];
+          const allowedCountries = [
+            "us",
+            "ca",
+            "gb",
+            "au",
+            "nz",
+            "fr",
+            "de",
+            "it",
+            "es",
+            "pt",
+            "nl",
+            "be",
+            "ch",
+            "at",
+            "se",
+            "no",
+            "fi",
+            "dk",
+            "ie",
+            "lu",
+          ];
+
+          if (blockedCountries.includes(country)) {
+            window.location.href = "404.html";
+          }
 
           if (!allowedCountries.includes(country)) {
+            // Страна не подходит — редиректим на 404
             window.location.href = "404.html";
           }
         } catch (e) {
+          // если не удалось определить IP — тоже на 404
           window.location.href = "404.html";
         }
       })();
@@ -36,12 +63,12 @@
     <header class="header">
       <div class="logo">Wishbone<span>+Partners</span></div>
       <nav class="nav">
-        <a href="#projects">Проекты</a>
-        <a href="#about">О нас</a>
-        <a href="#news">Новости</a>
-        <a href="#team">Команда</a>
-        <a href="#contact">Контакты</a>
-        <button class="button">Получить шаблон</button>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#news">News</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+        <button class="button">Get template</button>
       </nav>
     </header>
 
@@ -51,15 +78,15 @@
           <div class="hero-content">
             <div class="hero-text">
               <h2 class="subheading">Wishbone+Partners</h2>
-              <h1 class="heading">Дом<br />прекрасной архитектуры.</h1>
+              <h1 class="heading">The home of<br />beautiful architecture.</h1>
               <p class="description">
-                Мы — архитектурная фирма, которая фокусируется на красивом, но
-                функциональном дизайне. По сути, мы считаем, что дизайн — это
-                удобство использования и доступность — это руководящие принципы
-                нашей работы. Подробнее о наших предыдущих проектах, нашем
-                процессе и нашей команде читайте ниже.
+                We are an architecture firm with a focus on beautiful but
+                functional design. At its heart, we believe design is about
+                usability and accessibility — these are the guiding principles
+                for our work. Read more about our previous projects, our process
+                and our team below.
               </p>
-              <a href="#" class="read-more">Узнать больше</a>
+              <a href="#" class="read-more">Read more</a>
             </div>
             <div class="hero-image">
               <img src="../img/hero_image.png" alt="hero image" />
@@ -72,7 +99,7 @@
         <div class="container">
           <div class="our">
             <div class="firm-title">
-              <h2>Наша фирма</h2>
+              <h2>Our firm</h2>
             </div>
             <div class="firm-content">
               <p>
@@ -100,7 +127,7 @@
                 tristique posuere.
               </p>
               <div class="firm-image">
-                <img src="../img/firm_image.png" alt="firm image" />
+                <img src="./img/firm_image.png" alt="firm image" />
                 <span>Stephen Collier</span>
                 <span>Senior Partner</span>
               </div>
@@ -119,15 +146,15 @@
         <div class="container">
           <div class="our-process">
             <div class="process-title">
-              <h2>Как мы делаем то, что мы делаем.</h2>
-              <p>Наши процессы</p>
+              <h2>How we do what we do.</h2>
+              <p>Our process</p>
             </div>
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
                   <img src="../img/sketching.png" alt="step image" />
                 </div>
-                <h2>Набросок</h2>
+                <h2>Sketching</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
@@ -138,7 +165,7 @@
                 <div class="step-image">
                   <img src="../img/finalizing.png" alt="step image" />
                 </div>
-                <h2>Завершение</h2>
+                <h2>Finalizing</h2>
                 <p>
                   Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor
                   leo iaculis luctus sapien ac arcu tempor, vitae.
@@ -148,7 +175,7 @@
                 <div class="step-image">
                   <img src="../img/building.png" alt="step image" />
                 </div>
-                <h2>Сборка</h2>
+                <h2>Building</h2>
                 <p>
                   Nulla ut tristique libero. Lorem ipsum ut tristique libero.
                   Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor
@@ -171,8 +198,8 @@
           <div class="customers-block">
             <div class="customers-textarea">
               <div class="customers-title">
-                <h2>Счастливые клиенты.</h2>
-                <p>Приоритетные клиенты</p>
+                <h2>Happy customers.</h2>
+                <p>prior clients</p>
               </div>
               <div class="customers-text">
                 <p>
@@ -202,10 +229,10 @@
         <div class="container">
           <div class="projects-block">
             <div class="projects-title">
-              <h2>Избранные проекты.</h2>
+              <h2>Featured projects.</h2>
               <p>
-                Некоторые из последних и самых выдающихся проектов от нас<br />
-                здесь, в Wishbone+Partners.
+                Some of the latest and greatest projects from us<br />
+                here at Wishbone+Partners.
               </p>
             </div>
             <div class="projects-image">
@@ -221,7 +248,7 @@
         <div class="container">
           <div class="team-area">
             <div class="team-content">
-              <h2>Встречайте нашу команду</h2>
+              <h2>Meet our team</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
