--- a/ru/index.html
+++ b/ru/index.html
@@ -8,7 +8,7 @@
 
     <title>Wishbone+Partners</title>
 
-    <script defer>
+    <!-- <script defer>
       (async function () {
         try {
           const res = await fetch("https://api.country.is/");
@@ -24,7 +24,7 @@
           window.location.href = "404.html";
         }
       })();
-    </script>
+    </script> -->
 
     <link
       rel="stylesheet"
