--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,7 @@
 
     <title>Wishbone+Partners</title>
 
-    <script defer src="../js/geo-detect-en.js"></script>
+    <!--<script defer src="../js/geo-detect-en.js"></script>-->
 
     <link
       rel="stylesheet"
