--- a/ru/index.html
+++ b/ru/index.html
@@ -8,7 +8,7 @@
 
     <title>Wishbone+Partners</title>
 
-    <!-- <script defer src="../js/geo-detect-ru.js"></script> -->
+    <script defer src="../js/geo-detect-ru.js"></script>
 
     <link
       rel="stylesheet"
