--- a/ru/index.html
+++ b/ru/index.html
@@ -193,9 +193,15 @@
               </p>
             </div>
             <div class="projects-image">
-              <img src="../img/project_1.png" alt="project image" />
-              <img src="../img/project_2.png" alt="project image" />
-              <img src="../img/project_3.png" alt="project image" />
+              <div class="project-item">
+                <img src="../img/project_1.png" alt="project image" />
+              </div>
+              <div class="project-item">
+                <img src="../img/project_2.png" alt="project image" />
+              </div>
+              <div class="project-item">
+                <img src="../img/project_3.png" alt="project image" />
+              </div>
             </div>
           </div>
         </div>
