--- a/en/index.html
+++ b/en/index.html
@@ -8,8 +8,6 @@
 
     <title>Wishbone+Partners</title>
 
-    <!--<script defer src="../js/geo-detect-en.js"></script>-->
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -25,6 +23,7 @@
         <a href="#news">News</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
+        <a href="../index.html">RU</a>
         <button class="button">Get template</button>
       </nav>
     </header>
@@ -84,7 +83,7 @@
                 tristique posuere.
               </p>
               <div class="firm-image">
-                <img src="./img/firm_image.png" alt="firm image" />
+                <img src="../img/firm_image.png" alt="firm image" />
                 <span>Stephen Collier</span>
                 <span>Senior Partner</span>
               </div>
