--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -83,7 +83,7 @@
               <a href="#" class="read-more">Узнать больше</a>
             </div>
             <div class="hero-image">
-              <img src="./img/hero_image.png" alt="hero image" />
+              <img src="./assets/img/hero_image.png" alt="hero image" />
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
                 tristique posuere.
               </p>
               <div class="firm-image">
-                <img src="./img/firm_image.png" alt="firm image" />
+                <img src="./assets/img/firm_image.png" alt="firm image" />
                 <span>Stephen Collier</span>
                 <span>Senior Partner</span>
               </div>
@@ -132,7 +132,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image1.png" alt="frame image" />
+          <img src="./assets/img/frame_image1.png" alt="frame image" />
         </div>
       </section>
 
@@ -146,7 +146,7 @@
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/sketching.png" alt="step image" />
+                  <img src="./assets/img/sketching.png" alt="step image" />
                 </div>
                 <h2>Набросок</h2>
                 <p>
@@ -157,7 +157,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/finalizing.png" alt="step image" />
+                  <img src="./assets/img/finalizing.png" alt="step image" />
                 </div>
                 <h2>Завершение</h2>
                 <p>
@@ -167,7 +167,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="./img/building.png" alt="step image" />
+                  <img src="./assets/img/building.png" alt="step image" />
                 </div>
                 <h2>Сборка</h2>
                 <p>
@@ -183,7 +183,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image2.png" alt="frame image" />
+          <img src="./assets/img/frame_image2.png" alt="frame image" />
         </div>
       </section>
 
@@ -204,10 +204,10 @@
               </div>
             </div>
             <div class="customers-image">
-              <img src="./img/customer_1.png" alt="frame image" />
-              <img src="./img/customer_2.png" alt="frame image" />
-              <img src="./img/customer_3.png" alt="frame image" />
-              <img src="./img/customer_4.png" alt="frame image" />
+              <img src="./assets/img/customer_1.png" alt="frame image" />
+              <img src="./assets/img/customer_2.png" alt="frame image" />
+              <img src="./assets/img/customer_3.png" alt="frame image" />
+              <img src="./assets/img/customer_4.png" alt="frame image" />
             </div>
           </div>
         </div>
@@ -231,13 +231,13 @@
             </div>
             <div class="projects-image">
               <div class="project-item">
-                <img src="./img/project_1.png" alt="project image" />
+                <img src="./assets/img/project_1.png" alt="project image" />
               </div>
               <div class="project-item">
-                <img src="./img/project_2.png" alt="project image" />
+                <img src="./assets/img/project_2.png" alt="project image" />
               </div>
               <div class="project-item">
-                <img src="./img/project_3.png" alt="project image" />
+                <img src="./assets/img/project_3.png" alt="project image" />
               </div>
             </div>
           </div>
@@ -259,7 +259,10 @@
 
             <div class="team-grid">
               <div class="team-member">
-                <img src="./img/Stephen Collier.png" alt="Stephen Collier" />
+                <img
+                  src="./assets/img/Stephen Collier.png"
+                  alt="Stephen Collier"
+                />
                 <div>
                   <h4>Stephen Collier</h4>
                   <p>Senior Partner</p>
@@ -267,7 +270,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Nolan Peters.png" alt="Nolan Peters" />
+                <img src="./assets/img/Nolan Peters.png" alt="Nolan Peters" />
                 <div>
                   <h4>Nolan Peters</h4>
                   <p>Associate</p>
@@ -275,7 +278,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Ferris Wonder.png" alt="Ferris Wonder" />
+                <img src="./assets/img/Ferris Wonder.png" alt="Ferris Wonder" />
                 <div>
                   <h4>Ferris Wonder</h4>
                   <p>Associate Partner</p>
@@ -283,7 +286,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Aria Stone.png" alt="Aria Stone" />
+                <img src="./assets/img/Aria Stone.png" alt="Aria Stone" />
                 <div>
                   <h4>Aria Stone</h4>
                   <p>Senior Partner</p>
@@ -291,7 +294,7 @@
               </div>
 
               <div class="team-member">
-                <img src="./img/Niko Ferry.png" alt="Niko Ferry" />
+                <img src="./assets/img/Niko Ferry.png" alt="Niko Ferry" />
                 <div>
                   <h4>Niko Ferry</h4>
                   <p>Partner</p>
@@ -304,7 +307,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image4.png" alt="frame image" />
+          <img src="./assets/img/frame_image4.png" alt="frame image" />
         </div>
       </section>
     </main>
