--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../assets/styles/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -45,7 +45,7 @@
               <a href="#" class="read-more">Read more</a>
             </div>
             <div class="hero-image">
-              <img src="../img/hero_image.png" alt="hero image" />
+              <img src="../assets/img/hero_image.png" alt="hero image" />
             </div>
           </div>
         </div>
@@ -83,7 +83,7 @@
                 tristique posuere.
               </p>
               <div class="firm-image">
-                <img src="../img/firm_image.png" alt="firm image" />
+                <img src="../assets/img/firm_image.png" alt="firm image" />
                 <span>Stephen Collier</span>
                 <span>Senior Partner</span>
               </div>
@@ -94,7 +94,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="../img/frame_image1.png" alt="frame image" />
+          <img src="../assets/img/frame_image1.png" alt="frame image" />
         </div>
       </section>
 
@@ -108,7 +108,7 @@
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
-                  <img src="../img/sketching.png" alt="step image" />
+                  <img src="../assets/img/sketching.png" alt="step image" />
                 </div>
                 <h2>Sketching</h2>
                 <p>
@@ -119,7 +119,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="../img/finalizing.png" alt="step image" />
+                  <img src="../assets/img/finalizing.png" alt="step image" />
                 </div>
                 <h2>Finalizing</h2>
                 <p>
@@ -129,7 +129,7 @@
               </div>
               <div class="process-step">
                 <div class="step-image">
-                  <img src="../img/building.png" alt="step image" />
+                  <img src="../assets/img/building.png" alt="step image" />
                 </div>
                 <h2>Building</h2>
                 <p>
@@ -145,7 +145,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="../img/frame_image2.png" alt="frame image" />
+          <img src="../assets/img/frame_image2.png" alt="frame image" />
         </div>
       </section>
 
@@ -166,10 +166,10 @@
               </div>
             </div>
             <div class="customers-image">
-              <img src="../img/customer_1.png" alt="frame image" />
-              <img src="../img/customer_2.png" alt="frame image" />
-              <img src="../img/customer_3.png" alt="frame image" />
-              <img src="../img/customer_4.png" alt="frame image" />
+              <img src="../assets/img/customer_1.png" alt="frame image" />
+              <img src="../assets/img/customer_2.png" alt="frame image" />
+              <img src="../assets/img/customer_3.png" alt="frame image" />
+              <img src="../assets/img/customer_4.png" alt="frame image" />
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="../img/frame_image3.png" alt="frame image" />
+          <img src="../assets/img/frame_image3.png" alt="frame image" />
         </div>
       </section>
 
@@ -192,9 +192,9 @@
               </p>
             </div>
             <div class="projects-image">
-              <img src="../img/project_1.png" alt="project image" />
-              <img src="../img/project_2.png" alt="project image" />
-              <img src="../img/project_3.png" alt="project image" />
+              <img src="../assets/img/project_1.png" alt="project image" />
+              <img src="../assets/img/project_2.png" alt="project image" />
+              <img src="../assets/img/project_3.png" alt="project image" />
             </div>
           </div>
         </div>
@@ -215,7 +215,10 @@
 
             <div class="team-grid">
               <div class="team-member">
-                <img src="../img/Stephen Collier.png" alt="Stephen Collier" />
+                <img
+                  src="../assets/img/Stephen Collier.png"
+                  alt="Stephen Collier"
+                />
                 <div>
                   <h4>Stephen Collier</h4>
                   <p>Senior Partner</p>
@@ -223,7 +226,7 @@
               </div>
 
               <div class="team-member">
-                <img src="../img/Nolan Peters.png" alt="Nolan Peters" />
+                <img src="../assets/img/Nolan Peters.png" alt="Nolan Peters" />
                 <div>
                   <h4>Nolan Peters</h4>
                   <p>Associate</p>
@@ -231,7 +234,10 @@
               </div>
 
               <div class="team-member">
-                <img src="../img/Ferris Wonder.png" alt="Ferris Wonder" />
+                <img
+                  src="../assets/img/Ferris Wonder.png"
+                  alt="Ferris Wonder"
+                />
                 <div>
                   <h4>Ferris Wonder</h4>
                   <p>Associate Partner</p>
@@ -239,7 +245,7 @@
               </div>
 
               <div class="team-member">
-                <img src="../img/Aria Stone.png" alt="Aria Stone" />
+                <img src="../assets/img/Aria Stone.png" alt="Aria Stone" />
                 <div>
                   <h4>Aria Stone</h4>
                   <p>Senior Partner</p>
@@ -247,7 +253,7 @@
               </div>
 
               <div class="team-member">
-                <img src="../img/Niko Ferry.png" alt="Niko Ferry" />
+                <img src="../assets/img/Niko Ferry.png" alt="Niko Ferry" />
                 <div>
                   <h4>Niko Ferry</h4>
                   <p>Partner</p>
@@ -260,7 +266,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="../img/frame_image4.png" alt="frame image" />
+          <img src="../assets/img/frame_image4.png" alt="frame image" />
         </div>
       </section>
     </main>
