--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,44 +7,6 @@
     <meta name="description" content="Описание сайта" />
 
     <title>Wishbone+Partners</title>
-
-    <script>
-      (async function () {
-        const savedLang = localStorage.getItem("lang");
-        const urlLang = window.location.pathname.split("/")[1];
-        const supported = ["ru", "en"];
-
-        if (savedLang === "en" && urlLang !== "en") {
-          window.location.replace(window.location.origin + "/en/");
-          return;
-        }
-
-        if (savedLang && supported.includes(savedLang)) return;
-
-        try {
-          const res = await fetch("https://ipapi.co/json/");
-          const geo = await res.json();
-          const country = geo.country.toLowerCase();
-
-          const browserLang = navigator.language?.split("-")[0] || "ru";
-
-          const isRussianGeo = ["ru", "by", "kz", "ua", "uz", "kg"].includes(
-            country
-          );
-          const isRussianLang = browserLang === "ru";
-
-          if (!isRussianGeo && !isRussianLang) {
-            localStorage.setItem("lang", "en");
-            window.location.replace(window.location.origin + "/en/");
-          } else {
-            localStorage.setItem("lang", "ru");
-          }
-        } catch (e) {
-          // fallback: остаёмся на текущей странице
-          console.error("Geo/lang detection failed", e);
-        }
-      })();
-    </script>
 
     <link
       rel="stylesheet"
@@ -56,13 +18,13 @@
     <header class="header">
       <div class="logo">Wishbone<span>+Partners</span></div>
       <nav class="nav">
-        <a href="#projects">Проекты</a>
-        <a href="#about">О нас</a>
-        <a href="#news">Новости</a>
-        <a href="#team">Команда</a>
-        <a href="#contact">Контакты</a>
-        <a href="./en/index.html">EN</a>
-        <button class="button">Получить шаблон</button>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#news">News</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+        <a href="./ru/index.html">RU</a>
+        <button class="button">Get template</button>
       </nav>
     </header>
 
@@ -72,15 +34,15 @@
           <div class="hero-content">
             <div class="hero-text">
               <h2 class="subheading">Wishbone+Partners</h2>
-              <h1 class="heading">Дом<br />прекрасной архитектуры.</h1>
+              <h1 class="heading">The home of<br />beautiful architecture.</h1>
               <p class="description">
-                Мы — архитектурная фирма, которая фокусируется на красивом, но
-                функциональном дизайне. По сути, мы считаем, что дизайн — это
-                удобство использования и доступность — это руководящие принципы
-                нашей работы. Подробнее о наших предыдущих проектах, нашем
-                процессе и нашей команде читайте ниже.
+                We are an architecture firm with a focus on beautiful but
+                functional design. At its heart, we believe design is about
+                usability and accessibility — these are the guiding principles
+                for our work. Read more about our previous projects, our process
+                and our team below.
               </p>
-              <a href="#" class="read-more">Узнать больше</a>
+              <a href="#" class="read-more">Read more</a>
             </div>
             <div class="hero-image">
               <img src="./assets/img/hero_image.png" alt="hero image" />
@@ -93,7 +55,7 @@
         <div class="container">
           <div class="our">
             <div class="firm-title">
-              <h2>Наша фирма</h2>
+              <h2>Our firm</h2>
             </div>
             <div class="firm-content">
               <p>
@@ -140,15 +102,15 @@
         <div class="container">
           <div class="our-process">
             <div class="process-title">
-              <h2>Как мы делаем то, что мы делаем.</h2>
-              <p>Наши процессы</p>
+              <h2>How we do what we do.</h2>
+              <p>Our process</p>
             </div>
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
                   <img src="./assets/img/sketching.png" alt="step image" />
                 </div>
-                <h2>Набросок</h2>
+                <h2>Sketching</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
@@ -159,7 +121,7 @@
                 <div class="step-image">
                   <img src="./assets/img/finalizing.png" alt="step image" />
                 </div>
-                <h2>Завершение</h2>
+                <h2>Finalizing</h2>
                 <p>
                   Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor
                   leo iaculis luctus sapien ac arcu tempor, vitae.
@@ -169,7 +131,7 @@
                 <div class="step-image">
                   <img src="./assets/img/building.png" alt="step image" />
                 </div>
-                <h2>Сборка</h2>
+                <h2>Building</h2>
                 <p>
                   Nulla ut tristique libero. Lorem ipsum ut tristique libero.
                   Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor
@@ -192,8 +154,8 @@
           <div class="customers-block">
             <div class="customers-textarea">
               <div class="customers-title">
-                <h2>Счастливые клиенты.</h2>
-                <p>Приоритетные клиенты</p>
+                <h2>Happy customers.</h2>
+                <p>prior clients</p>
               </div>
               <div class="customers-text">
                 <p>
@@ -215,7 +177,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="./img/frame_image3.png" alt="frame image" />
+          <img src="./assets/img/frame_image3.png" alt="frame image" />
         </div>
       </section>
 
@@ -223,22 +185,16 @@
         <div class="container">
           <div class="projects-block">
             <div class="projects-title">
-              <h2>Избранные проекты.</h2>
+              <h2>Featured projects.</h2>
               <p>
-                Некоторые из последних и самых выдающихся проектов от нас<br />
-                здесь, в Wishbone+Partners.
+                Some of the latest and greatest projects from us<br />
+                here at Wishbone+Partners.
               </p>
             </div>
             <div class="projects-image">
-              <div class="project-item">
-                <img src="./assets/img/project_1.png" alt="project image" />
-              </div>
-              <div class="project-item">
-                <img src="./assets/img/project_2.png" alt="project image" />
-              </div>
-              <div class="project-item">
-                <img src="./assets/img/project_3.png" alt="project image" />
-              </div>
+              <img src="./assets/img/project_1.png" alt="project image" />
+              <img src="./assets/img/project_2.png" alt="project image" />
+              <img src="./assets/img/project_3.png" alt="project image" />
             </div>
           </div>
         </div>
@@ -248,7 +204,7 @@
         <div class="container">
           <div class="team-area">
             <div class="team-content">
-              <h2>Встречайте нашу команду</h2>
+              <h2>Meet our team</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
