--- a/ru/index.html
+++ b/ru/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,13 +18,13 @@
     <header class="header">
       <div class="logo">Wishbone<span>+Partners</span></div>
       <nav class="nav">
-        <a href="#projects">Projects</a>
-        <a href="#about">About</a>
-        <a href="#news">News</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
-        <a href="../index.html">RU</a>
-        <button class="button">Get template</button>
+        <a href="#projects">Проекты</a>
+        <a href="#about">О нас</a>
+        <a href="#news">Новости</a>
+        <a href="#team">Команда</a>
+        <a href="#contact">Контакты</a>
+        <a href="../index.html">EN</a>
+        <button class="button">Получить шаблон</button>
       </nav>
     </header>
 
@@ -34,15 +34,15 @@
           <div class="hero-content">
             <div class="hero-text">
               <h2 class="subheading">Wishbone+Partners</h2>
-              <h1 class="heading">The home of<br />beautiful architecture.</h1>
+              <h1 class="heading">Дом<br />прекрасной архитектуры.</h1>
               <p class="description">
-                We are an architecture firm with a focus on beautiful but
-                functional design. At its heart, we believe design is about
-                usability and accessibility — these are the guiding principles
-                for our work. Read more about our previous projects, our process
-                and our team below.
+                Мы — архитектурная фирма, которая фокусируется на красивом, но
+                функциональном дизайне. По сути, мы считаем, что дизайн — это
+                удобство использования и доступность — это руководящие принципы
+                нашей работы. Подробнее о наших предыдущих проектах, нашем
+                процессе и нашей команде читайте ниже.
               </p>
-              <a href="#" class="read-more">Read more</a>
+              <a href="#" class="read-more">Узнать больше</a>
             </div>
             <div class="hero-image">
               <img src="../assets/img/hero_image.png" alt="hero image" />
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="our">
             <div class="firm-title">
-              <h2>Our firm</h2>
+              <h2>Наша фирма</h2>
             </div>
             <div class="firm-content">
               <p>
@@ -102,15 +102,15 @@
         <div class="container">
           <div class="our-process">
             <div class="process-title">
-              <h2>How we do what we do.</h2>
-              <p>Our process</p>
+              <h2>Как мы делаем то, что мы делаем.</h2>
+              <p>Наши процессы</p>
             </div>
             <div class="process-content">
               <div class="process-step">
                 <div class="step-image">
                   <img src="../assets/img/sketching.png" alt="step image" />
                 </div>
-                <h2>Sketching</h2>
+                <h2>Набросок</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
@@ -121,7 +121,7 @@
                 <div class="step-image">
                   <img src="../assets/img/finalizing.png" alt="step image" />
                 </div>
-                <h2>Finalizing</h2>
+                <h2>Завершение</h2>
                 <p>
                   Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor
                   leo iaculis luctus sapien ac arcu tempor, vitae.
@@ -131,7 +131,7 @@
                 <div class="step-image">
                   <img src="../assets/img/building.png" alt="step image" />
                 </div>
-                <h2>Building</h2>
+                <h2>Сборка</h2>
                 <p>
                   Nulla ut tristique libero. Lorem ipsum ut tristique libero.
                   Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor
@@ -154,8 +154,8 @@
           <div class="customers-block">
             <div class="customers-textarea">
               <div class="customers-title">
-                <h2>Happy customers.</h2>
-                <p>prior clients</p>
+                <h2>Счастливые клиенты.</h2>
+                <p>Приоритетные клиенты</p>
               </div>
               <div class="customers-text">
                 <p>
@@ -177,7 +177,7 @@
 
       <section class="frame">
         <div class="frame-wrapper">
-          <img src="../assets/img/frame_image3.png" alt="frame image" />
+          <img src="../img/frame_image3.png" alt="frame image" />
         </div>
       </section>
 
@@ -185,16 +185,22 @@
         <div class="container">
           <div class="projects-block">
             <div class="projects-title">
-              <h2>Featured projects.</h2>
+              <h2>Избранные проекты.</h2>
               <p>
-                Some of the latest and greatest projects from us<br />
-                here at Wishbone+Partners.
+                Некоторые из последних и самых выдающихся проектов от нас<br />
+                здесь, в Wishbone+Partners.
               </p>
             </div>
             <div class="projects-image">
-              <img src="../assets/img/project_1.png" alt="project image" />
-              <img src="../assets/img/project_2.png" alt="project image" />
-              <img src="../assets/img/project_3.png" alt="project image" />
+              <div class="project-item">
+                <img src="../assets/img/project_1.png" alt="project image" />
+              </div>
+              <div class="project-item">
+                <img src="../assets/img/project_2.png" alt="project image" />
+              </div>
+              <div class="project-item">
+                <img src="../assets/img/project_3.png" alt="project image" />
+              </div>
             </div>
           </div>
         </div>
@@ -204,7 +210,7 @@
         <div class="container">
           <div class="team-area">
             <div class="team-content">
-              <h2>Meet our team</h2>
+              <h2>Встречайте нашу команду</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
